Fix shrinking of the squares
The squares in the sketch pad were shrinking with
windows resizing. I made it so that they stay the
same even at the expense of not fitting in the window.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    
 }
 
 .mainDiv {
@@ -10,6 +11,7 @@ body {
     flex-wrap: wrap;
     width: 800px;
     height: 800px;
+    flex: 0 0 auto;
 
 
 }
